Fix 'Better Informatics' title being off-center

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -368,12 +368,13 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 28px;
     text-decoration: none;
     text-align: center;
-    letter-spacing: 35px;
-    max-width: 906px;
     height: 29px;
+    max-width: 100%;
     display: flex;
+    justify-content: space-around;
     margin: 0 auto 20px;
-    transform: translateX(35px);
+    letter-spacing: 35px;
+    text-indent: 35px; /* counter the letter-spacing after the last character */
 }
 #title:hover {
     opacity: 0.5;
